--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -1,9 +1,10 @@
-<% companies = Company.all %>
-
 <h1>My CRM</h1>
  
+<p><a href="/companies/new">Add Company</a>
+</p>
+
 <ul>
-  <% for company in companies %>
+  <% for company in @companies %>
     <li>
       <%= company["name"] %>
     </li>
