--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -1,12 +1,15 @@
 <!-- Company details page -->
 
-<h1>Dunder Mifflin</h1>
+<h1><%= @company["name"] %></h1>
 
-<h2>Scranton, PA</h2>
+<h2> 
+<%=@company["city"]%> ,<%=@company["state"]%>
+</h2>
 
 <h3>Contacts</h3>
 
 <ul>
+  <% Contact.where ({"company_id"=> @company["id"]})%>
   <li>Michael Scott</li>
   <li>Dwight Schrute</li>
 </ul>
