--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,6 +1,21 @@
 <h1>New Post</h1>
 
 <form action="/posts" method="post">
-  <%# add form fields %>
+  <p>
+  <label for="">Author</label>
+  <input type="text" name="author" id="author_new">
+  </p>
+
+  <p>
+  <label for="">Image URL</label>
+  <input type="text" name="image" id="image_new">
+  </p>
+  
+  
+  <p>
+  <label for="">Body</label>
+  <input type="text" name="body" id="body_new">
+  </p>
+
   <button>Submit</button>
 </form>
